// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown snapshots Dropdown should render 1`] = `
<div>
  <div
    class="dropdown "
    data-show="false"
  >
    <div
      class="dropdown-button button"
      data-testid="dropdown-btn"
    >
      Menu dropdown
    </div>
    <div
      class="dropdown-menu hidden "
      style="width: 0px;"
    >
      <ul>
        <li
          class="dropdown-item"
        >
          <a
            href="#dropdown"
          >
            Item 1
          </a>
        </li>
        <li
          class="dropdown-item"
        >
          <a
            href="#dropdown"
          >
            Item 2
          </a>
        </li>
        <li
          class="dropdown-item"
        >
          <a
            href="#dropdown"
          >
            Item 3
          </a>
        </li>
        <li
          class="dropdown-item"
        >
          <a
            href="#dropdown"
          >
            Item 4
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown snapshots Dropdown show 1`] = `
<div>
  <div
    class="dropdown "
    data-show="true"
  >
    <div
      class="dropdown-button button"
      data-testid="dropdown-btn"
    >
      Menu dropdown
    </div>
    <div
      class="dropdown-menu  "
      style="left: 0px; width: 0px;"
    >
      <ul>
        <li
          class="dropdown-item"
        >
          <a
            href="#dropdown"
          >
            Item 1
          </a>
        </li>
        <li
          class="dropdown-item"
        >
          <a
            href="#dropdown"
          >
            Item 2
          </a>
        </li>
        <li
          class="dropdown-item"
        >
          <a
            href="#dropdown"
          >
            Item 3
          </a>
        </li>
        <li
          class="dropdown-item"
        >
          <a
            href="#dropdown"
          >
            Item 4
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
